--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Calculate This Stuff!</title>
-    
+    <script src="vendor/jquery.min.js" charset="utf-8"></script>
+    <script src="scripts/client.js" charset="utf-8"></script>
+
   </head>
   <body>
+    <div id="container">
+      <form id="inputForm">
+        <input name="inputX" id="inputX" type="number" />
+        <select name="operation" id="operation">
+          <option value="add">Add</option>
+          <option value="sub">Subtract</option>
+          <option value="div">Divide</option>
+          <option value="mult">Multiply</option>
+        </select>
+        <input name="inputY" id="inputY" type="number" />
+        <input type="submit" value="Go!" />
+      </form>
+    </div>
 
   </body>
 </html>
