--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -21,6 +21,9 @@
         <input type="submit" value="Go!" />
       </form>
     </div>
+    <div>
+      <h1 id="result"></h1>
+    </div>
 
   </body>
 </html>
